# pocl

./: CMakeLists.txt  README.riscv  README.riscv-linux  README.riscv-newlib  README.vortex  RISCV_linux.cmake  RISCV_linux64.cmake  RISCV_newlib.cmake  config.h.in.cmake  pocl_cl.h  vortex.patch
benchmarks/nearn/: kernel.spv  main.cc
benchmarks/saxpy/: main.cc
benchmarks/sfilter/: kernel.spv  main.cc
benchmarks/sgemm/: kernel.cl  kernel.spv  main.cc
benchmarks/vecadd/: main.cc
cmake/: FindHwloc.cmake  FindPthreadsWin32.cmake  LLVM.cmake
dogfood/: copy_llvm_libs.sh  env.sh  hello.c  hello.cpp  hello2.c
dogfood/vecadd/: Makefile  SCRATCH  build_app.sh  build_app_x86.sh  build_kernel.sh  build_kernel_x86.sh  main.c  main.cc  run.sh  run_x86.sh  vecadd.c  vecadd.cl
dogfood/vecadd/riscv/: build_kernel.sh  vecadd.c
dogfood/vecadd/x86/: build_app.sh  build_kernel.sh  run.sh
dogfood/vecadd2/: Makefile  kernel.cl  main.c  main.cc
dogfood/vecadd3/: main.cc  prebuilt.sh  saxpy.cu  saxpy.spv  sfilter.cu  sgemm.cu  vecadd.cu  vecadd.spv
include/: CMakeLists.txt  _vortex_kernel_stub.h  pocl.h  pocl_cache.h  pocl_context.h  vortex_compiler_features.h
lib/CL/: .pocl_build.c.swp  .pocl_llvm_build_vortex.cc.swp  CMakeLists.txt  clCreateContextFromType.c  clCreateImage.c  clCreateKernel.c  clCreateProgramWithBinary.c  clCreateSampler.c  clCreateUserEvent.c  clGetPlatformInfo.c  clGetProgramInfo.c  clLinkProgram.c  clReleaseContext.c  clReleaseDevice.c  clReleaseEvent.c  clSVMAlloc.c  clSetUserEventStatus.c  clWaitForEvents.c  pocl_binary.c  pocl_build.c  pocl_cache.c  pocl_cl.h  pocl_debug.c  pocl_file_util.c  pocl_image_util.c  pocl_image_util.h  pocl_llvm.h  pocl_llvm_build.cc  pocl_llvm_build_vortex.cc  pocl_llvm_metadata.cc  pocl_llvm_utils.cc  pocl_llvm_wg.cc  pocl_shared.h  pocl_timing.c  pocl_util.c  pocl_util.h
lib/CL/devices/: CMakeLists.txt  common.c  common.h  cpuinfo.c  devices.c
lib/CL/devices/accel/: CMakeLists.txt
lib/CL/devices/basic/: CMakeLists.txt  basic.c
lib/CL/devices/hsa/: pocl-hsa.c
lib/CL/devices/newlib/: CMakeLists.txt  newlib.c  newlib.cc  newlib.h  vx_api.c  vx_api.h  vx_intrinsics.s
lib/CL/devices/pthread/: CMakeLists.txt
lib/CL/devices/tce/: CMakeLists.txt
lib/CL/devices/tce/ttasim/: ttasim.cc
lib/CL/devices/topology/: pocl_topology.c
lib/CL/devices/vortex/: CMakeLists.txt  kernel_args.h  kernel_main.c  pocl-vortex-config.h  pocl-vortex.c  pocl-vortex.cc  pocl-vortex.h  vortex.cc  vortex.h  vortex_utils.cc  vortex_utils.h
lib/CL/devices/vulkan/: CMakeLists.txt
lib/kernel/: CMakeLists.txt  printf_base.c  printf_base.h
lib/kernel/host/: CMakeLists.txt
lib/kernel/vortex/: CMakeLists.txt  atomic_add.ll  atomics.cl  atomics.cl.ll  barrier.c  printf.c  workitems.c
lib/llvmopencl/: CMakeLists.txt  LLVMUtils.h  PrintModule.cc  VortexAttribute.cc  VortexBarrier.cc  VortexConvertBarrier.cc  VortexPrintf.cc  Workgroup.cc  WorkitemLoops.cc  WorkitemLoops.h  WorkitemLoopsVX.cc  linker.cpp
lib/poclu/: misc.c
poclu/: misc.c
tests/runtime/: test_clSetEventCallback.c
tools/docker/Ubuntu/: distro.64bit
